--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ form{
 div{
     padding: 10px;
     height: 30px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #button{
@@ -49,4 +51,52 @@ label{
 pre{
     margin-top: 25px;
     font-size: 25px;
+}
+
+
+@media (max-width: 500px) {
+    
+form{
+    margin: 10px;
+    text-align: left;
+}
+
+div{
+    padding: 5px;
+    height: 15px;
+}
+
+#button{
+    margin-top: 5px;
+    margin-left: 5px;
+    height: 15px;
+    width: 35px;
+    text-align: center;
+}
+
+legend{
+    padding-left: 10px;
+    font-size: 10px;
+}
+
+#pesoOvo{
+    text-align: center;
+    width: 35px;
+    height: 15px;
+}
+
+.caixa{
+    height: 15px;
+    padding: 1.5px;
+}
+
+label{
+    height:  15px;
+    font-size: 12.5px;
+}
+
+pre{
+    margin-top: 12.5px;
+    font-size: 12.5px;
+}
 }
